[package]
name = "simple-ticket-system"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { version = "=0.7.3", features = ["router", "fullstack"] }
serde = { version = "1", features = ["derive"] }
rusqlite = { version = "0.39.0", features = ["bundled"], optional = true }

[features]
default = []
web = ["dioxus/web"]
server = ["dioxus/server", "dep:rusqlite"]
